fix: header z-index

--- a/css/style.css
+++ b/css/style.css
@@ -454,6 +454,9 @@ section {
   .header.white .logo-black {
     display: unset;
   }
+  .header.active {
+    z-index: 10;
+  }
   .header__burger {
     display: block;
     position: relative;
